--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Top Page</title>
 
   <link rel="icon" href="img/favicon.png">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -14,7 +14,7 @@
 <body>
   <header class="header">
     <div class="header-image-cover">
-      <img class="header-image" src="img/logo.png" alt="logo">
+      <img class="header-image" src="img/nft-6858009_1280.png" alt="logo">
     </div>
     <nav class="header-nav">
       <a href="#about">ABOUT</a>
@@ -24,7 +24,8 @@
     </nav>
   </header>
   <div class="main">
-    <img id="top" class="main-image" src="img/main.png" alt="logo">
+    <video id="top" class="main-image" src="img/74779-554220620_small.mp4" alt="logo"
+    autoplay loop muted preload="auto">
   </div>
   <section id="about" class="about">
     <h1 class="headline">ABOUT</h1>
@@ -75,7 +76,7 @@
   <section id="content" class="content">
     <h1 class="headline">CONTENT</h1>
     <div class="content-list">
-      <img class="content-image" src="img/content.png" alt="logo"
+      <img class="content-image" src="img/nature-3082832_1280.jpg" alt="logo"
       data-aos="slide-right" data-aos-duration="1500">
       <div class="content-text">
         <h2>タイトルタイトル</h2>
@@ -91,7 +92,7 @@
       </div>
     </div>
     <div class="content-list">
-      <img class="content-image2" src="img/content.png" alt="logo"
+      <img class="content-image2" src="img/ocean-3605547_1280.jpg" alt="logo"
       data-aos="slide-left" data-aos-duration="1500">
       <div class="content-text2">
         <h2>タイトルタイトル</h2>
