--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="header">
     <div class="header-image-cover">
-      <img class="header-image" src="img/nft-6858009_1280.png" alt="logo">
+      <img class="header-image" src="img/nft-6858009_1280.png" alt="logo" width="140" height="80">
     </div>
     <nav class="header-nav">
       <a href="#about">ABOUT</a>
