--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   </header>
   <div class="main">
     <video id="top" class="main-image" src="img/74779-554220620_small.mp4" alt="logo"
-    autoplay loop muted preload="auto">
+    autoplay loop muted preload="auto" playsinline>
+
   </div>
   <section id="about" class="about">
     <h1 class="headline">ABOUT</h1>
