--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
   <header class="header">
     <div class="header-image-cover">
-      <img class="header-image" src="img/nft-6858009_1280.png" alt="logo" width="140" height="80">
+      <a href="index.html">
+        <img class="header-image" src="img/nft-6858009_1280.png" alt="logo" width="140" height="80">
+      </a>
     </div>
     <nav class="header-nav">
       <a href="#about">ABOUT</a>
@@ -24,7 +26,7 @@
     </nav>
   </header>
   <div class="main">
-    <video id="top" class="main-image" src="img/74779-554220620_small.mp4" alt="logo"
+    <video id="top" class="main-image" src="img/47711-451772921_small.mp4" alt="logo"
     autoplay loop muted preload="auto" playsinline>
 
   </div>
@@ -71,7 +73,7 @@
       </p>
     </div>
     <div class="about-link">
-      <a href="">READ MORE</a>
+      <a href="about.html">READ MORE</a>
     </div>
   </section>
   <section id="content" class="content">
@@ -174,7 +176,7 @@
       </p>
     </div>
     <div>
-      <img src="img/footer.png" alt="logo">
+      <img src="img/nft-6858009_1280.png" alt="logo">
     </div>
     <div>
       <address>
