--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           テキストテキストテキストテキストテキストテキストテキストテキスト
         </p>
         <div class="content-link">
-          <a href="">READ MORE</a>
+          <a href="content.html">READ MORE</a>
         </div>
       </div>
     </div>
@@ -106,7 +106,7 @@
           テキストテキストテキストテキストテキストテキストテキストテキスト
         </p>
         <div class="content-link">
-          <a href="">READ MORE</a>
+          <a href="content.html">READ MORE</a>
         </div>
       </div>
     </div>
