--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <section id="contact" class="contact">
     <h1 class="headline">CONTACT</h1>
     <div class="contact-link">
-      <a href="">CONTACT FORM</a>
+      <a href="contact.html">CONTACT FORM</a>
     </div>
     <div class="head-link">
       <a href="#top">TOP</a>
